# gk-labs-website

./: .env.example  .gitignore  .replit  LICENSE  README.md  app.py  database.py  kai.py  kaito.py  package-lock.json  pyproject.toml  requirements.txt
static/: custom.css  kaito.js
templates/: about.html  algo_op.html  applicationform.html  applicationsubmitted.html  cadnm_op.html  careers.html  careersbanner.html  data_op.html  digart_op.html  embed_op.html  footer.html  headcontent.html  header.html  home.html  homebanner.html  jobitems.html  jobpage.html  kai.html  kaito.html  maintenancenotice.html  nojobitems.html  ops.html  opslist.html  projects.html  projects_list.html  resources.html  resources_list.html  sim_op.html  snc_op.html
